update webpack config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "'오늘은 어디 밀롱가를 갈까?!'를 콘셉으로 Kakao Map API를 활용해 만든 장소검색 서비스입니다.밀롱가는 탱고라는 Social Dance를 추는 장소입니다. 서울에 있는 10곳의 밀롱가를 JSON형식의 데이터로 가져와 Kakao map에서 검색할 수 있는 반응형 App을 구현했습니다.",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && npm run build",
+    "build": "cross-env NODE_ENV=production webpack",
+    "deploy": "gh-pages -d dist",
     "dev": "webpack serve --env development",
     "start": "cross-env NODE_ENV=production npm run start"
   },
@@ -17,18 +18,29 @@
   "bugs": {
     "url": "https://github.com/maldives0/ymillonga-map/issues"
   },
-  "homepage": "https://github.com/maldives0/ymillonga-map",
+  "homepage": "https://github.com/maldives0/ymillonga-map/index.html",
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
-    "core-js": "^3.8.2",
-    "regenerator-runtime": "^0.13.7",
+    "css-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "npm": "^6.14.11",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.12.1",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1"
+    "webpack-dev-server": "^3.11.1",
+    "sass": "^1.32.2",
+    "node-sass": "^5.0.0",
+    "file-loader": "^6.2.0"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"   
+    "cross-env": "^7.0.3",
+    "dotenv-webpack": "^6.0.0",
+    "gh-pages": "^3.1.0",
+    "rimraf": "^3.0.2",
+    "core-js": "^3.8.2",
+    "regenerator-runtime": "^0.13.7"
   }
 }
