upload dist folder

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ymillonga-map",
   "version": "1.0.0",
   "description": "'오늘은 어디 밀롱가를 갈까?!'를 콘셉으로 Kakao Map API를 활용해 만든 장소검색 서비스입니다.밀롱가는 탱고라는 Social Dance를 추는 장소입니다. 서울에 있는 10곳의 밀롱가를 JSON형식의 데이터로 가져와 Kakao map에서 검색할 수 있는 반응형 App을 구현했습니다.",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "deploy": "gh-pages -d dist",
