--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d test",
     "dev": "webpack serve --env development",
     "start": "cross-env NODE_ENV=production npm run start"
   },
