--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.html",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "deploy": "gh-pages -d test",
     "dev": "webpack serve --env development",
     "start": "cross-env NODE_ENV=production npm run start"
   },
@@ -23,23 +22,12 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1",
-    "mini-css-extract-plugin": "^1.3.3",
-    "npm": "^6.14.11",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
     "webpack": "^5.12.1",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
-    "sass": "^1.32.2",
-    "node-sass": "^5.0.0",
-    "file-loader": "^6.2.0"
+    "webpack-dev-server": "^3.11.1"  
   },
   "dependencies": {
     "cross-env": "^7.0.3",
-    "dotenv-webpack": "^6.0.0",
-    "gh-pages": "^3.1.0",
-    "rimraf": "^3.0.2",
     "core-js": "^3.8.2",
     "regenerator-runtime": "^0.13.7"
   }
